--- a/css/index.css
+++ b/css/index.css
@@ -110,7 +110,7 @@
   --modular-scale-32: 8rem;
   --modular-scale-64: 16rem;
 
-  --max-width: 39rem;
+  --max-width: 37rem;
 }
 
 
@@ -206,18 +206,25 @@
 
 html {
   font-family: var(--serif);
-  font-size: 20px;
+  font-size: 18px;
   font-weight: 400;
+}
+
+@media (min-width: 50rem) {
+  html {
+    font-size: 20px;
+  }
 }
 
 body {
   min-height: 100vh;
-  background: var(--gray-0);
+  background: var(--white);
+  color: var(--gray-9);
 }
 
 body.dark {
-  background: var(--gray-9);
-  color: var(--white);
+  background: var(--black);
+  color: var(--gray-0);
 }
 
 pre {
@@ -232,7 +239,7 @@ pre {
 
 .header {
   padding: var(--modular-scale-2) var(--modular-scale-4) var(--modular-scale-2);
-  background: var(--gray-0);
+  background: var(--gray-1);
 }
 
 .dark .header {
@@ -242,7 +249,7 @@ pre {
 @media (min-width: 50rem) {
   .header {
     padding-left: var(--modular-scale-8);
-    padding-right: var(--modular-scale-8); 
+    padding-right: var(--modular-scale-8);
   }
 }
 
@@ -506,7 +513,7 @@ pre {
   line-height: 1.6;
   margin: 0;
   padding: 0;
-  color: var(--gray-8);
+  color: var(--gray-9);
 }
 
 .dark .typeset p {
@@ -640,7 +647,7 @@ pre {
   padding: 0;
   margin: 0;
   border-left: 4px solid var(--green-6);
-  background: var(--green-2);
+  background: var(--green-1);
   padding: 1.15rem 1.5rem;
   font-style: italic;
   letter-spacing: var(--tracking-tight);
@@ -651,8 +658,8 @@ pre {
 
 .dark .typeset aside {
   border-left: 4px solid var(--green-4);
-  background: var(--green-9);
-  color: var(--gray-0);
+  background: var(--green-8);
+  color: var(--green-0);
 }
 
 .typeset aside a {
@@ -796,7 +803,7 @@ pre {
 
  code[class*="language-"],
  pre[class*="language-"] {
-     color: var(--gray-8);
+     color: var(--gray-9);
      font-family: "Consolas", "Bitstream Vera Sans Mono", "Courier New", Courier, monospace;
      direction: ltr;
      text-align: left;
@@ -805,36 +812,36 @@ pre {
      word-break: normal;
      font-size: 0.95em;
      line-height: 1.2em;
- 
+
      -moz-tab-size: 4;
      -o-tab-size: 4;
      tab-size: 4;
- 
+
      -webkit-hyphens: none;
      -moz-hyphens: none;
      -ms-hyphens: none;
      hyphens: none;
  }
- 
+
  pre[class*="language-"]::-moz-selection, pre[class*="language-"] ::-moz-selection,
  code[class*="language-"]::-moz-selection, code[class*="language-"] ::-moz-selection {
-     background: #C1DEF1;
+  background-color: var(--gray-0);
  }
- 
+
  pre[class*="language-"]::selection, pre[class*="language-"] ::selection,
  code[class*="language-"]::selection, code[class*="language-"] ::selection {
-     background: #C1DEF1;
+  background-color: var(--gray-0);
  }
- 
+
  /* Code blocks */
  pre[class*="language-"] {
      padding: 1em;
      margin: .5em 0;
      overflow: auto;
      /* border: 1px solid #dddddd; */
-     background-color: var(--gray-2);
+     background-color: var(--gray-0);
  }
- 
+
  /* Inline code */
  :not(pre) > code[class*="language-"] {
      padding: .2em;
@@ -842,7 +849,7 @@ pre {
      background: #f8f8f8;
      border: 1px solid #dddddd;
  }
- 
+
 
 
 
@@ -857,20 +864,20 @@ pre {
  .token.cdata {
      color: #008000; font-style: italic;
  }
- 
+
  .token.namespace {
      opacity: .7;
  }
- 
+
  .token.string {
      color: #A31515;
  }
- 
+
  .token.punctuation,
  .token.operator {
      color: #393A34; /* no highlight */
  }
- 
+
  .token.url,
  .token.symbol,
  .token.number,
@@ -880,17 +887,17 @@ pre {
  .token.inserted {
      color: #36acaa;
  }
- 
+
  .token.atrule,
  .token.keyword,
  .token.attr-value,
  .language-autohotkey .token.selector,
- .language-json .token.boolean, 
- .language-json .token.number, 
+ .language-json .token.boolean,
+ .language-json .token.number,
  code[class*="language-css"]{
      color: #0000ff;
  }
- 
+
  .token.function {
      color: #393A34;
  }
@@ -898,54 +905,54 @@ pre {
  .language-autohotkey .token.tag {
      color: #9a050f;
  }
- 
+
  .token.selector,
  .language-autohotkey .token.keyword {
      color: #00009f;
  }
- 
+
  .token.important,
  .token.bold {
      font-weight: bold;
  }
- 
+
  .token.italic {
      font-style: italic;
  }
- 
+
  .token.class-name,
  .language-json .token.property {
      color: #2B91AF;
  }
- 
+
  .token.tag,
  .token.selector {
      color: #800000;
  }
- 
+
  .token.attr-name,
  .token.property,
  .token.regex,
  .token.entity {
      color: #ff0000;
  }
- 
+
  .token.directive.tag  .tag {
      background: #ffff00;
      color: #393A34;
  }
- 
+
  /* overrides color-values for the Line Numbers plugin
   * http://prismjs.com/plugins/line-numbers/
   */
  .line-numbers .line-numbers-rows {
    border-right-color: #a5a5a5;
  }
- 
+
  .line-numbers-rows > span:before {
    color: #2B91AF;
  }
- 
+
  /* overrides color-values for the Line Highlight plugin
  * http://prismjs.com/plugins/line-highlight/
  */
@@ -992,17 +999,17 @@ pre {
 	 word-spacing: normal;
 	 word-break: normal;
 	 line-height: 1.5;
- 
+
 	 -moz-tab-size: 4;
 	 -o-tab-size: 4;
 	 tab-size: 4;
- 
+
 	 -webkit-hyphens: none;
 	 -moz-hyphens: none;
 	 -ms-hyphens: none;
 	 hyphens: none;
  }
- 
+
  /* Code blocks */
  .dark pre[class*="language-"] {
 	 /* padding: 1em; */
@@ -1010,58 +1017,58 @@ pre {
 	 overflow: auto;
 	 border-radius: 0.3em;
  }
- 
+
  .dark :not(pre) > code[class*="language-"],
  .dark pre[class*="language-"] {
-	 background: #1d1f21;
+	 background: var(--gray-9)
  }
- 
+
  /* Inline code */
  .dark :not(pre) > code[class*="language-"] {
 	 padding: .1em;
 	 border-radius: .3em;
  }
- 
+
  .dark .token.comment,
  .dark .token.prolog,
  .dark .token.doctype,
  .dark .token.cdata {
 	 color: #7C7C7C;
  }
- 
+
  .dark .token.punctuation {
 	 color: #c5c8c6;
  }
- 
+
  .dark .namespace {
 	 opacity: .7;
  }
- 
+
  .dark .token.property,
  .dark .token.keyword,
  .dark .token.tag {
 	 color: #96CBFE;
  }
- 
+
  .dark .token.class-name {
 	 color: #FFFFB6;
 	 text-decoration: underline;
  }
- 
+
  .dark .token.boolean,
  .dark .token.constant {
 	 color: #99CC99;
  }
- 
+
  .dark .token.symbol,
  .dark .token.deleted {
 	 color: #f92672;
  }
- 
+
  .dark .token.number {
 	 color: #FF73FD;
  }
- 
+
  .dark .token.selector,
  .dark .token.attr-name,
  .dark .token.string,
@@ -1070,46 +1077,46 @@ pre {
  .dark .token.inserted {
 	 color: #A8FF60;
  }
- 
+
  .dark .token.variable {
 	 color: #C6C5FE;
  }
- 
+
  .dark .token.operator {
 	 color: #EDEDED;
  }
- 
+
  .dark .token.entity {
 	 color: #FFFFB6;
 	 /* text-decoration: underline; */
  }
- 
+
  .dark .token.url {
 	 color: #96CBFE;
  }
- 
+
  .dark .language-css .token.string,
  .dark .style .token.string {
 	 color: #87C38A;
  }
- 
+
  .dark .token.atrule,
  .dark .token.attr-value {
 	 color: #F9EE98;
  }
- 
+
  .dark .token.function {
 	 color: #DAD085;
  }
- 
+
  .dark .token.regex {
 	 color: #E9C062;
  }
- 
+
  .dark .token.important {
 	 color: #fd971f;
  }
- 
+
  .dark .token.important,
  .dark .token.bold {
 	 font-weight: bold;
@@ -1117,7 +1124,7 @@ pre {
  .dark .token.italic {
 	 font-style: italic;
  }
- 
+
  .dark .token.entity {
 	 cursor: help;
  }
